# aegis

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md
.github/workflows/: ci.yml
crates/aegis/: Cargo.toml
crates/aegis-capability/: Cargo.toml  README.md
crates/aegis-capability/src/: capability.rs  error.rs  lib.rs  set.rs
crates/aegis-capability/src/builtin/: clock.rs  filesystem.rs  logging.rs  mod.rs  network.rs
crates/aegis-cli/: Cargo.toml  README.md
crates/aegis-cli/src/: main.rs
crates/aegis-cli/src/commands/: inspect.rs  mod.rs  run.rs  validate.rs
crates/aegis-core/: Cargo.toml  README.md
crates/aegis-core/src/: config.rs  engine.rs  error.rs  lib.rs  module.rs  sandbox.rs
crates/aegis-host/: Cargo.toml  README.md
crates/aegis-host/src/: context.rs  error.rs  lib.rs  linker.rs
crates/aegis-observe/: Cargo.toml  README.md
crates/aegis-observe/src/: events.rs  lib.rs  metrics.rs  report.rs
crates/aegis-resource/: Cargo.toml  README.md
crates/aegis-resource/src/: epoch.rs  error.rs  fuel.rs  lib.rs  limiter.rs
crates/aegis/src/: lib.rs
