[workspace]
resolver = "2"
members = [
    "crates/aegis",
    "crates/aegis-core",
    "crates/aegis-capability",
    "crates/aegis-resource",
    "crates/aegis-host",
    "crates/aegis-observe",
    "crates/aegis-cli",
]

[workspace.package]
version = "0.1.1"
edition = "2024"
authors = ["Aayush Adhikari"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/aayushadhikari7/aegis"
homepage = "https://github.com/aayushadhikari7/aegis"
documentation = "https://docs.rs/aegis"
keywords = ["wasm", "webassembly", "sandbox", "security", "runtime"]
categories = ["wasm", "development-tools"]
rust-version = "1.85"

[workspace.dependencies]
# Internal crates
aegis-wasm = { path = "crates/aegis", version = "0.1.1" }
aegis-core = { path = "crates/aegis-core", version = "0.1.1" }
aegis-capability = { path = "crates/aegis-capability", version = "0.1.1" }
aegis-resource = { path = "crates/aegis-resource", version = "0.1.1" }
aegis-host = { path = "crates/aegis-host", version = "0.1.1" }
aegis-observe = { path = "crates/aegis-observe", version = "0.1.1" }

# WebAssembly runtime
wasmtime = "29"

# Error handling
thiserror = "2"
anyhow = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
parking_lot = "0.12"
dashmap = "6"
bytes = "1"
uuid = { version = "1", features = ["v4", "serde"] }

# Testing
wat = "1"

[profile.release]
lto = true
codegen-units = 1
