[package]
name = "aegis-capability"
description = "Capability-based security system for the Aegis WebAssembly sandbox"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
thiserror = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
dashmap = { workspace = true }
