[package]
name = "aegis-capability"
description = "Capability-based security system for the Aegis WebAssembly sandbox"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
thiserror = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
dashmap = { workspace = true }
