[package]
name = "aegis-cli"
description = "Command-line interface for the Aegis WebAssembly sandbox"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "aegis"
path = "src/main.rs"

[dependencies]
aegis = { workspace = true }
aegis-core = { workspace = true }
aegis-capability = { workspace = true }
aegis-observe = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
