[package]
name = "aegis-wasm-cli"
description = "Command-line interface for the Aegis WebAssembly sandbox"
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[[bin]]
name = "aegis"
path = "src/main.rs"

[dependencies]
aegis-wasm = { workspace = true }
aegis-core = { workspace = true }
aegis-capability = { workspace = true }
aegis-observe = { workspace = true }
wasmtime = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
