[package]
name = "aegis-host"
description = "Host function system for the Aegis WebAssembly sandbox"
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
aegis-core = { workspace = true }
aegis-capability = { workspace = true }
wasmtime = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
