[package]
name = "aegis-resource"
description = "Resource management for the Aegis WebAssembly sandbox"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
aegis-core = { workspace = true }
wasmtime = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, optional = true }

[features]
default = []
async = ["tokio"]
