[package]
name = "aegis-resource"
description = "Resource management for the Aegis WebAssembly sandbox"
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
aegis-core = { workspace = true }
wasmtime = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, optional = true }

[features]
default = []
async = ["tokio"]
