[package]
name = "aegis-wasm"
description = "Aegis - A local-first WebAssembly sandbox runtime"
readme = "../../README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
aegis-core = { workspace = true }
aegis-capability = { workspace = true }
aegis-resource = { workspace = true }
aegis-host = { workspace = true }
aegis-observe = { workspace = true }
wasmtime = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
wat = { workspace = true }
tokio = { workspace = true }
